--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -2,7 +2,7 @@
   <div class="container mt-5">
     <h1 class="header text-primary mb-5">Comment</h1>
     <div>
-      <h2>Les objectifs du Défi</h2>
+      <h2 id="comment1">Les objectifs du Défi</h2>
        <p class="text">Le Défi consiste en l'accompagnement structurel et individuel des établissements participants dans l’étude et la mise en place de solutions techniques (poubelles, affichages, équipement ZD), organisationnelles et comportementales (procédures, missions, partenariats…) pour réduire leurs déchets.</p>
       <ul class="list my-3 bullet-custom">
         <h5 class="mb-3 mt-5">Objectifs principaux :</h5>
@@ -49,8 +49,8 @@
         </div>
       </div>
       <div class="col-lg-6">
-        <div class="sous-menu ">
-          <h2>Les structures éligibles</h2>
+        <div>
+          <h2 id="comment2">Les structures éligibles</h2>
           <p class="text">
             Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : public ou privé, quelque soit son activité ou sa taille.
             Pour ce premier Défi, les structures participantes doivent résider dans le territoire de Bordeaux Métropole.
@@ -60,7 +60,7 @@
         </div>
 
         <div class="mt-5">
-          <h2>Les déchets concernés</h2>
+          <h2 id="comment3">Les déchets concernés</h2>
           <p class="text">
             Emballages (bouteilles, cannettes etc), fournitures de bureau (papiers, stylos etc), matériel informatique (ordinateurs, téléphones etc), vaisselle (gobelets de café, verre en plastique pour la fontaine à eau etc), biodéchets (marc de café etc), mobilier, mégots, ampoules, piles, cartouches d'encre, produits d'entretien, cartons, palettes...
           </p>
@@ -70,7 +70,7 @@
       </div>
 
     <div class="mt-5">
-      <h2>Comment ça se passe ?</h2>
+      <h2 id="comment4">Comment ça se passe ?</h2>
 
         Collecte de données
         <p>Sur une durée de 6 mois, les structures devront mesurer régulièrement leur production de déchets et évaluer leurs comportement, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur progression et leur classement par rapport aux autres.</p>
@@ -100,7 +100,7 @@
     </div>
 
     <div>
-      <h5 class="mb-3 mt-5">Planning</h5>
+      <h2 class="mb-3 mt-5" id="comment5">Planning</h2>
       <div class="d-flex justify-content-center align-items-center my-5">
         <%= image_tag "timeline", style:"width: 100%", class:"px-lg-5" %>
       </div>
@@ -108,7 +108,7 @@
     </div>
 
     <div>
-      <h5 class="mb-3 mt-5">Combien ça coûte ?</h5>
+      <h2 class="mb-3 mt-5" id="comment6">Combien ça coûte ?</h2>
       <p>La participation au Défi comprend un prix forfaitaire de 150€, plus un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.</p>
       <ul class="list my-3 bullet-custom  bullet-secondary">
         <h5 class="mb-3 mt-5">Exemples :</h5>
