--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -1,44 +1,91 @@
-<div class="ekologeek">
-  <h1>Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h1>
-  <p>
-    Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
+<div class="wrapper">
+  <div class="container mt-5">
+    <div class="ekologeek">
+      <h2 class="header">Ekolo[geek]</h2>
+      <h4 class="mb-2">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
 
-    Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
+      <p>
+        Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
+      </p>
+      <p>
+        Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
+      </p>
 
-    Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
+      <p>
+        Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
+      </p>
+      <p>
+        Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
+      </p>
 
-    Association loi 1901 reconnue d'intérêt général
-    Maison de la Nature et de l'Environnement
-    3 rue de Tauzia 33800 BORDEAUX
+      <p>
+        Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
+      </p>
+      <p class="mb-5">
+        Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
+      </p>
 
-    Logo de l'asso avec lien vers www.ekologeek.com
-  </p>
-</div>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <div class="image-team">
+            <%= image_tag("equipe.jpg") %>
+          </div>
+        </div>
 
-<div class="partenaires">
-  <h1>Les partenaires</h1>
-  <p>
-    Le projet étant porté par une association, il a besoin de partenaires  pour être mis en œuvre.
+        <div class="col-12 col-md-6">
+          <div class="h-100 p-2 d-flex flex-column justify-content-center align-items-center para-0">
+            <p>Association loi 1901 reconnue d'intérêt général</p>
+            <p>Maison de la Nature et de l'Environnement</p>
+            <p> 3 rue de Tauzia 33800 BORDEAUX</p>
+            <p>
+              <%= link_to "www.ekologeek.com"  %>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    Pour chaque partenaire : logo et lien vers leur site
+    <div class="partenaires mt-5">
+      <h2>Les partenaires</h2>
+      <p>
+        Le projet étant porté par une association, il a besoin de partenaires  pour être mis en œuvre.
+      </p>
 
-    Le Club des Entreprises de Bordeaux et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
+      <%= link_to "https://www.cebx.fr/", target: :blank do %>
+        <div class="card club">
+          <img class="card-img-top" src="<%= image_path("entreprises") %>">
+          <div class="card-body">
+            <p class="card-text">
+              Le Club des Entreprises de Bordeaux et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
+            </p>
+          </div>
+        </div>
+      <% end %>
 
+      <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
+        <div class="card metropole">
+          <img class="card-img-top" src="<%= image_path("metropole") %>">
+          <div class="card-body">
+            <p class="card-text">
+              Premier partenaire financier, Bordeaux Métropole nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
+            </p>
+          </div>
+        </div>
+      <% end %>
 
-    Bordeaux Métropole
-    Premier partenaire financier, BM nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
-
-    L'ADEME
-    Important partenaire financier, l'ADEME soutient le Défi qui est complémentaire de ses propres outils.
-
-    La Région : ouai c'est ça
-
-    Les autres : à venir
-
-    Les développeurs : vous voulez apparaître ici ?
-
-
-    Vous aussi, <%= link_to "soutenez le projet !", '/soutenir' %>
-
-  </p>
+      <%= link_to "https://www.ademe.fr/", target: :blank do %>
+        <div class="card ademe">
+          <img class="card-img-top" src="<%= image_path("ademe") %>">
+          <div class="card-body">
+            <p class="card-text">
+              Important partenaire financier, l'ADEME soutient le Défi qui est complémentaire de ses propres outils.
+            </p>
+          </div>
+        </div>
+      <% end %>
+      <h3>
+        <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-secondary" %>
+      </h3>
+    </div>
+  </div>
 </div>
