--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -11,3 +11,18 @@
   width: 100%;
   text-align: center;
 }
+
+.image-team {
+  width: 100%;
+
+  img {
+    width: 100%;
+  }
+}
+
+.para-0 {
+  p {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+}
