--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -6,6 +6,7 @@
   background: $light-gray;
 
 }
+
 .title {
   width: 100%;
   text-align: center;
@@ -24,6 +25,7 @@
     margin-top: 0;
     margin-bottom: 0;
   }
+}
 
 .header {
   text-transform: uppercase;
