--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="container mt-5">
     <div class="ekologeek">
-      <h2 class="header">Ekolo[geek]</h2>
-      <h4 class="mb-2">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
+      <h2 class="header text-primary">Ekolo[geek]</h2>
+      <h4 class="mb-4">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
 
       <p>
         Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
@@ -46,44 +46,55 @@
     </div>
 
     <div class="partenaires mt-5">
-      <h2>Les partenaires</h2>
+      <h2 class="header text-primary">Les partenaires</h2>
       <p>
         Le projet étant porté par une association, il a besoin de partenaires  pour être mis en œuvre.
       </p>
 
-      <%= link_to "https://www.cebx.fr/", target: :blank do %>
-        <div class="card club">
-          <img class="card-img-top" src="<%= image_path("entreprises") %>">
-          <div class="card-body">
-            <p class="card-text">
-              Le Club des Entreprises de Bordeaux et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
-            </p>
-          </div>
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <%= link_to "https://www.cebx.fr/", target: :blank do %>
+            <div class="card club">
+              <img class="card-img-top" src="<%= image_path("entreprises") %>">
+              <div class="card-body">
+                <p class="card-text">
+                  Le Club des Entreprises de Bordeaux et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
+                </p>
+              </div>
+            </div>
+          <% end %>
         </div>
-      <% end %>
 
-      <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
-        <div class="card metropole">
-          <img class="card-img-top" src="<%= image_path("metropole") %>">
-          <div class="card-body">
-            <p class="card-text">
-              Premier partenaire financier, Bordeaux Métropole nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
-            </p>
-          </div>
+        <div class="col-12 col-md-4">
+          <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
+            <div class="card metropole">
+              <img class="card-img-top" src="<%= image_path("metropole") %>">
+              <div class="card-body">
+                <p class="card-text">
+                  Premier partenaire financier, Bordeaux Métropole nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
+                </p>
+              </div>
+            </div>
+          <% end %>
         </div>
-      <% end %>
 
-      <%= link_to "https://www.ademe.fr/", target: :blank do %>
-        <div class="card ademe">
-          <img class="card-img-top" src="<%= image_path("ademe") %>">
-          <div class="card-body">
-            <p class="card-text">
-              Important partenaire financier, l'ADEME soutient le Défi qui est complémentaire de ses propres outils.
-            </p>
-          </div>
+        <div class="col-12 col-md-4">
+          <%= link_to "https://www.ademe.fr/", target: :blank do %>
+            <div class="card ademe">
+              <img class="card-img-top" src="<%= image_path("ademe") %>">
+              <div class="card-body">
+                <p class="card-text">
+                  Important partenaire financier, l'ADEME soutient le Défi qui est complémentaire de ses propres outils.
+                </p>
+              </div>
+            </div>
+          <% end %>
         </div>
-      <% end %>
-      <h3>
+
+      </div>
+
+
+      <h3 class="mt-5">
         <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-secondary" %>
       </h3>
     </div>
