--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -4,24 +4,24 @@
       <h2 class="header text-primary">Ekolo[geek]</h2>
       <h4 class="mb-4">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
 
-      <p>
+      <p class="text">
         Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
       </p>
-      <p>
+      <p class="text">
         Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
       </p>
 
-      <p>
+      <p class="text">
         Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
       </p>
-      <p>
+      <p class="text">
         Le concept d’Ekolo[geek] est né de la volonté de rendre l’information sur la protection de l’environnement simple et attractive pour le grand public, en proposant des moyens concrets d’action. Depuis plus de 10 ans l'association sensibilise et mobilise le jeune, grand public aux éco-gestes (eau, énergie, déchets, consommation responsable). Nous sommes actifs sur le web mais nos principales actions ont lieu sur le terrain. En effet, nous participons à plus d'une quarantaine d'événements par an, ainsi qu'à des temps périscolaires. L'association compte 2 salariés, 1 service civique, et une quarantaine de bénévoles.
       </p>
 
-      <p>
+      <p class="text">
         Depuis 2016, nous accompagnons également des professionnels dans leur démarche d'éco-responsabilité interne. Par exemple, depuis 2016 nous accompagnons la mairie du Bouscat pour améliorer le développement de leur Programme d'Eco-Responsabilité interne. En 2017, nous avons accompagné des « agents référents » sur le thème de l’économie circulaire avec cinq ateliers-formations et la visite d'une ressourcerie. En 2018, nous poursuivons l'accompagnement auprès de 3 référent·e·s techniques au niveau de changements de comportements sur l'énergie et les déchets.
       </p>
-      <p class="mb-5">
+      <p class="text mb-5">
         Depuis fin 2016, nous sommes missionnés par Enedis Aquitaine-Nord pour étudier l’impact sur leurs clients qui ont été accompagnés par les Volontaires de la Transition Energétique (VTE). Il s’agit de mesurer l’évolution des consommations d’électricité suite à cet accompagnement et d’étudier comment les familles apprennent à mieux maîtriser leur compteur électrique et les fonctionnalités associées, disponibles sur l’espace client d’Enedis.
       </p>
 
@@ -47,7 +47,7 @@
 
     <div class="partenaires mt-5">
       <h2 class="header text-primary">Les partenaires</h2>
-      <p>
+      <p class="text">
         Le projet étant porté par une association, il a besoin de partenaires  pour être mis en œuvre.
       </p>
 
@@ -57,8 +57,8 @@
             <div class="card club">
               <img class="card-img-top" src="<%= image_path("entreprises") %>">
               <div class="card-body">
-                <p class="card-text">
-                  Le Club des Entreprises de Bordeaux et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
+                <p class="card-text text">
+                  Le <strong> Club des Entreprises de Bordeaux </strong> et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
                 </p>
               </div>
             </div>
@@ -70,8 +70,8 @@
             <div class="card metropole">
               <img class="card-img-top" src="<%= image_path("metropole") %>">
               <div class="card-body">
-                <p class="card-text">
-                  Premier partenaire financier, Bordeaux Métropole nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
+                <p class="card-text text">
+                  Premier partenaire financier, <strong> Bordeaux Métropole </strong> nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
                 </p>
               </div>
             </div>
@@ -83,20 +83,18 @@
             <div class="card ademe">
               <img class="card-img-top" src="<%= image_path("ademe") %>">
               <div class="card-body">
-                <p class="card-text">
-                  Important partenaire financier, l'ADEME soutient le Défi qui est complémentaire de ses propres outils.
+                <p class="card-text text">
+                  Important partenaire financier, l' <strong>ADEME</strong> soutient le Défi qui est complémentaire de ses propres outils.
                 </p>
               </div>
             </div>
           <% end %>
         </div>
-
+      </div>
+      <div class="call-action">
+        <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-secondary m-5" %>
       </div>
 
-
-      <h3 class="mt-5">
-        <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-secondary" %>
-      </h3>
     </div>
   </div>
 </div>
