--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -20,7 +20,7 @@
           <div class="card card-size">
             <div class="card-body">
               <h3 class="card-title">Environnement </h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Les  solutions  actuelles  pour  traiter  les  déchets  ultimes  ne  sont  pas  optimales  (enfouissement  et  incinération).  Le  recyclage  consomme  aussi  beaucoup  de  ressources  naturelles  (énergie,  eau...)La  réduction  des  déchets  à  la  sourceréduits  les  impacts  environnementaux  (ressources  naturelles,  pollutions...)Le  Zéro  Déchet  (ZD)estune  démarcheayant  pour  objectif  de  réduire  vos  déchets  autant  que  possible.
               </p>
             </div>
@@ -42,7 +42,7 @@
           <div class="card card-size">
             <div class="card-body">
               <h3 class="card-title">Management </h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Une  politique  ambitieuse  de  réduction  de  vos  déchets  est  un  élément  valorisant,  de  plus  en  plus  attendu  parvos  salarié·e·s,  d'ailleurs  souvent  déjà  pratiquée  dans  leur  vie  personnelle.La  démarche  ZD  est  une  formidable  opportunité  de  mobiliser  vos  équipes  autour  d’un  projet  commun,  dépassant  les  fonctions  de  chacun·e  et  de  contribuer  au  mieux-vivre  dans  votre  structure.
               </p>
             </div>
@@ -64,7 +64,7 @@
           <div class="card card-size">
             <div class="card-body">
               <h3 class="card-title">Image externe</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Tout  comme  les  salarié·e·s,  vos  client·e·s,  fournisseurs,  administré·e·s,  bénéficiaires  et  partenaires  sont  de  plus  en  plus  regardants  sur  le  agissementdes  structures  professionnelles  en  matière  de  Développement  Durable,  etnotamment  en  ce  qui  concerne  les  déchets.Mettre  en  valeur  votre  engagement  environnemental  et  vos  actions  dans  une  démarche  ZD  contribue  positivement  à  votre  image  externe.
               </p>
             </div>
@@ -86,7 +86,7 @@
           <div class="card card-size">
             <div class="card-body">
               <h3 class="card-title">Economie</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Le  coût  complet  de  vos  déchets  inclut les  coûts  de  :
                 -  la  gestion  des  déchets  (collectivité  publique  ou  prestataire  privé),
                 -  la  gestion  interne  (temps  passé,  matériel,  espace  de  stockage...),
@@ -112,7 +112,7 @@
           <div class="card card-size">
             <div class="card-body">
               <h3 class="card-title">Logistique</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Les  déchets  stockés  en  vrac  dans  unebenne  ou  dans  un  bac  prennentbeaucoup  de  place,  et  ne  sont  pas  triés. Des  contenants  adaptés  font  gagner  de 2  à  10  fois  plus  d’espace  et  améliorentla  logistique  d'évacuation.  Optimiser  le  rangement  et  réduire  ses déchets  permettent  ainsi  de  diminuer l'espace  de  stockage  et  d'optimiser  la logistique.
               </p>
             </div>
@@ -134,7 +134,7 @@
           <div class="card card-size">
             <div class="card-body">
               <h3 class="card-title">Réglementation</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Tout  producteur  de  déchet  en  est responsable  jusqu’à  leur  élimination finale-article  L  541-2  et  L  541-22  ducode  de  l’environnement-Les  entreprises  ont  désormais  uneobligation  générale  de  tri  de  leursdéchets,  qui  concerne  5  flux  de  déchets(bois,  plastiques,  métaux,  verre,papier/carton).  Ellesdoivent  les  trierà  la  source  et  organiser  leur  collecteséparément  des  autres  déchets  pourpermettre  leur  valorisation  .  -“décret5  flux”  du  10  mars  2016-
               </p>
             </div>
@@ -159,7 +159,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour être mis en valeur</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements.
               </p>
             </div>
@@ -178,7 +178,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour inclure vos équipes</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle collaboration. Ainsi participer au projet permet, au sein de chaque structure, d'agir ensemble, de fédérer et mobiliser une équipe autour d'un projet commun.
               </p>
             </div>
@@ -197,7 +197,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour le collectif</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 L'intérêt du défi est de mettre en commun les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se nourrir des expériences des autres.
               </p>
             </div>
@@ -216,7 +216,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour l'accompagnement</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Tout au long du défi, un suivi des déchets et des comportement est effectué en interne. Des rencontres collectives régulières, ainsi qu'un accompagnement individuel permettent à chaque structure de fertiliser le terreau emmenant à l'action collective et durable.
               </p>
             </div>
@@ -235,7 +235,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour son type de déchet concerné</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Toute personne, toute entreprise est concernée par les déchets de fonctionnement (papier, stylos, ordinateurs, gobelets de café, emballages etc).  Les changements à ce niveau demandent en général peu d'investissements et sont rapides à mettre en place.
               </p>
             </div>
@@ -254,7 +254,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour sa complémentarité</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Le Défi  est complémentaire à d'autres outils et démarches existants : RSE, ISO 14001 ISO 26000, bilan carbone, Agenda 21, éco-structure (école, commerçants), labels spécifiques, Gagnants sur tous les coûts etc. Avec le vous pourrez ainsi initier ou compléter votre  démarche d'éco-responsabilité.
               </p>
             </div>
@@ -273,7 +273,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour son approche comportementale</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 L'idée est d'accompagner les structures participantes pour qu'elles fassent par elles-mêmes : faire émerger les idées, les accompagner dans les choix, les aider à la mise en place de solutions. Le but est de changer les comportements dans la durée, de provoquer l'engagement et l'action.
               </p>
             </div>
@@ -292,7 +292,7 @@
           <div class="card card-size-small">
             <div class="card-body">
               <h3 class="card-title">Pour gagner !</h3>
-              <p class="card-text">
+              <p class="card-text text">
                 Le défi apporte également une émulation collective car la compétition favorise l'envie de s'améliorer et de finir gagnant.
 
                 La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! La plus belle évolution (technique et comportementale) donnera un vainqueur, qui sera mis en avant dans toute la communication externe.
