--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -49,6 +49,9 @@
         </div>
       </li>
       <li class="nav-item m-2">
+        <%= link_to "Partenaires", "/partenaires", class:"nav-link text-light-gray" %>
+      </li>
+      <li class="nav-item m-2">
         <%= link_to "S'inscrire", "/inscription", class:"nav-link text-light-gray" %>
       </li>
       <!-- <li class="nav-item">
