--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -63,6 +63,11 @@
   background: white;
   width: 100%;
   height: 100%;
+   svg {
+    @media (max-width: $tablet) {
+      width: 100px;
+    }
+  }
 }
 
 .navbar-logo {
