--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -1,11 +1,12 @@
 <div class="wrapper">
-  <div class="container mt-5">
-    <h1 class="header text-primary mb-5">Comment</h1>
-    <div>
-      <h2 id="comment1">Les objectifs du Défi</h2>
+  <div id="comment1"></div>
+  <div class="container mt-5 mb-5">
+    <h1 class="header text-primary mb-5 text-center">Comment</h1>
+    <div class="header-padding-comment" >
+      <h2>Les objectifs du Défi</h2>
        <p class="text">Le Défi consiste en l'accompagnement structurel et individuel des établissements participants dans l’étude et la mise en place de solutions techniques (poubelles, affichages, équipement ZD), organisationnelles et comportementales (procédures, missions, partenariats…) pour réduire leurs déchets.</p>
-      <ul class="list my-3 bullet-custom">
-        <h5 class="mb-3 mt-5">Objectifs principaux :</h5>
+       <h5 class="my-4 ml-3">Objectifs principaux :</h5>
+      <ul class="list mb-5 bullet-custom">
         <li class="my-2 ml-lg-4">
           Réduire la production de déchets et les impacts environnementaux associés
         </li>
@@ -20,8 +21,9 @@
         </li>
       </ul>
 
-      <ul class="list my-5 bullet-custom bullet-secondary">
-        <h5 class="mb-3">Objectifs secondaires :</h5>
+      <div id="comment2"></div>
+      <h5 class="my-4 ml-3">Objectifs secondaires :</h5>
+      <ul class="list mb-5 bullet-custom bullet-secondary">
         <li class="my-2 ml-lg-4">
           Réduire les coûts de gestion des déchets
         </li>
@@ -45,12 +47,12 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="d-flex flex-column justify-content-center align-items-center h-100">
-          <%= image_tag "square-desk", width: 300 %>
+          <%= image_tag "square-desk", width: 300, class:"header-padding-comment-image" %>
         </div>
       </div>
       <div class="col-lg-6">
         <div>
-          <h2 id="comment2">Les structures éligibles</h2>
+          <h2 >Les structures éligibles</h2>
           <p class="text">
             Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : public ou privé, quelque soit son activité ou sa taille.
             Pour ce premier Défi, les structures participantes doivent résider dans le territoire de Bordeaux Métropole.
@@ -59,23 +61,22 @@
           </p>
         </div>
 
+        <div id="comment4"></div>
         <div class="mt-5">
-          <h2 id="comment3">Les déchets concernés</h2>
+          <h2 >Les déchets concernés</h2>
           <p class="text">
             Emballages (bouteilles, cannettes etc), fournitures de bureau (papiers, stylos etc), matériel informatique (ordinateurs, téléphones etc), vaisselle (gobelets de café, verre en plastique pour la fontaine à eau etc), biodéchets (marc de café etc), mobilier, mégots, ampoules, piles, cartouches d'encre, produits d'entretien, cartons, palettes...
           </p>
         </div>
       </div>
-
       </div>
-
     <div class="mt-5">
-      <h2 id="comment4">Comment ça se passe ?</h2>
+      <h2>Comment ça se passe ?</h2>
 
         Collecte de données
         <p>Sur une durée de 6 mois, les structures devront mesurer régulièrement leur production de déchets et évaluer leurs comportement, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur progression et leur classement par rapport aux autres.</p>
-        <ul class="list my-3 bullet-custom">
-          <h5 class="mb-3 mt-5">Activités collectives</h5>
+        <h5 class="my-4 ml-3">Activités collectives</h5>
+        <ul class="list mb-5 bullet-custom">
           <li class="my-2 ml-lg-4">
             Ateliers-formations échanges (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le défi…)
           </li>
@@ -92,6 +93,7 @@
             Durant le défi, des "sous-défis" facultatifs sont proposés aux établissements afin de leur offrir une autre forme de stimulation pour agir concrètement en interne sur les déchets
           </li>
         </ul>
+        <div id="comment5"></div>
         <h5 class="mb-3 mt-5">Accompagnement individuel</h5>
         <p>Un suivi régulier sera effectué avec chaque structure pour évaluer sa progression dans la démarche et l'accompagner dans la mise en place des actions : revue des données collectées, échanges par mail et téléphone.</p>
 
@@ -99,26 +101,26 @@
         Charte, règlement... - liens pour télécharger des documents à créer
     </div>
 
-    <div>
-      <h2 class="mb-3 mt-5" id="comment5">Planning</h2>
+    <div id="comment6"></div>
+    <div >
+      <h2 class="mb-3 mt-5" >Planning</h2>
       <div class="d-flex justify-content-center align-items-center my-5">
         <%= image_tag "timeline", style:"width: 100%", class:"px-lg-5" %>
       </div>
       <%= link_to "télécharger", root_path %>
     </div>
-
     <div>
-      <h2 class="mb-3 mt-5" id="comment6">Combien ça coûte ?</h2>
+      <h2 class="mb-3 mt-5" >Combien ça coûte ?</h2>
       <p>La participation au Défi comprend un prix forfaitaire de 150€, plus un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.</p>
-      <ul class="list my-3 bullet-custom  bullet-secondary">
-        <h5 class="mb-3 mt-5">Exemples :</h5>
+      <h5 class="my-4 ml-3">Exemples :</h5>
+      <ul class="list mb-5 bullet-custom  bullet-secondary">
         <li class="my-2 ml-lg-4">
           mon organisation comprend 10 employés, la participation au Défi sera de 150+10x10 = 250€
         </li>
         <li class="my-2 ml-lg-4">
           Augmenter la valorisation matière, organique voire énergétique des déchets produits
         </li>
-        <li class="my-2 ml-lg-4 mb-5">
+        <li class="my-2 ml-lg-4 mb-5 padding">
           mon organisation comprend 100 employés, la participation au Défi sera de 150+10x100 = 1150€
         </li>
       </ul>
