--- a/app/views/shared/_navbar_secondary.html.erb
+++ b/app/views/shared/_navbar_secondary.html.erb
@@ -1,3 +1,3 @@
 <div class="navbar-secondary d-flex justify-content-center align-items-center my-3">
-  <%= inline_svg 'logo', width:200 %>
+  <%= inline_svg 'logo', width:200, class:"logo-nav-secondary" %>
 </div>
