s'inscrire page styl ok

--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -1,12 +1,23 @@
-<h1>S'inscrire</h1>
-<p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez vous inscrire début décembre.
 
-D'ici là vous pouvez agir de votre côté ! Voici des exemples de gestes que vous pouvez mettre en place :
-    • Le guide du zéro déchet au bureau, créé par Zero Waste
-    • Le guide pour être éco-responsable au bureau, créé par l'ADEME
+<div class="wrapper">
+  <div class="container">
+    <h1 class="header text-primary my-5">S'inscrire</h1>
+    <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez vous inscrire début décembre.</p>
+    <p>D'ici là vous pouvez agir de votre côté ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
+    <h5 class="my-4 ml-3">Objectifs principaux :</h5>
+    <ul class="list mb-5 bullet-custom">
+      <li class="my-2 ml-lg-4">
+        Le guide du zéro déchet au bureau, créé par Zero Waste
+      </li>
+      <li class="my-2 ml-lg-4">
+        Le guide pour être éco-responsable au bureau, créé par l'ADEME
+      </li>
+    </ul>
+    <h5>Pour rester informé, laissez votre adresse mail</h5>
 
-Pour rester informé, laissez votre adresse mail
-
-Votre structure n'est pas située sur Bordeaux Métropole ? Vous pouvez organiser un défi sur votre territoire !  Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même !
-
-Lien vers contact </p>
+    <p>Votre structure n'est pas située sur Bordeaux Métropole ? Vous pouvez organiser un défi sur votre territoire ! Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même!</p>
+    <div class="padding">
+      <%= link_to "contact", root_path, class:"btn btn-secondary"%>
+    </div>
+  </div>
+</div>
